[gd_scene load_steps=45 format=2]

[ext_resource path="res://src/CollisionTemplates/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Enemies/EnemyStats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemies/TheArchaeologist/MummyShuffleLeft.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/TheArchaeologist/MummyShuffleRight.png" type="Texture" id=4]
[ext_resource path="res://src/Enemies/TheArchaeologist/Summons/Mummy.gd" type="Script" id=5]
[ext_resource path="res://Assets/Enemies/TheArchaeologist/MummyLeftTurn.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/TheArchaeologist/MummyRightTurn.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/TheArchaeologist/MummyCrumbleLeft.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/TheArchaeologist/MummyCrumbleRight.png" type="Texture" id=9]
[ext_resource path="res://src/Enemies/TheArchaeologist/Summons/AnimatedSprite.gd" type="Script" id=10]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform bool white;

void fragment(){
	vec4 color = texture(TEXTURE, UV);
	
	if(white){
		COLOR = vec4 (0.85, 0.85, 0.85, color.a)
	}else{
		COLOR = color;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/white = null

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "TurnRight",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "TurnLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "CrumbleRight",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "CrumbleLeft",
"speed": 10.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "ShuffleRight",
"speed": 8.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "ShuffleLeft",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 33.7508, 45.5924 )

[node name="Mummy" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, -48.4676 )
frames = SubResource( 33 )
animation = "CrumbleRight"
frame = 5
playing = true
script = ExtResource( 10 )

[node name="HurtBox" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -45.1868 )
shape = SubResource( 34 )

[node name="EnemyStats" parent="." instance=ExtResource( 2 )]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="HurtBox"]
